Update 1.1 Логические элементы.md

--- a/course1/computer_architecture/1.1 Логические элементы.md
+++ b/course1/computer_architecture/1.1 Логические элементы.md
@@ -4,13 +4,24 @@
 После доказательства в 1946 г. теоремы Джона фон Неймана об экономичности показательных позиционных систем счисления стало известно о преимуществах двоичной и троичной систем счисления по сравнению с десятичной системой счисления. От десятичных логических элементов перешли к двоичным логическим элементам. Двоичность и троичность позволяет значительно сократить количество операций и элементов, выполняющих эту обработку, по сравнению с десятичными логическими элементами.
 Логические элементы выполняют логическую функцию (операцию) над входными сигналами (операндами, данными).
 
+---
+
 [Вентиль](https://ru.wikipedia.org/wiki/Логический_вентиль) — базовый логический элемент цифровой схемы, выполняющий элементарную логическую операцию, преобразуя таким образом множество входных логических сигналов в выходной логический сигнал. Логика работы вентиля основана на битовых операциях с входными цифровыми сигналами в качестве операндов. При создании цифровой схемы вентили соединяют между собой, при этом выход используемого вентиля должен быть подключён к одному или к нескольким входам других вентилей. 
 В цифровой электронике логический уровень сигнала представлен в виде уровня напряжения (попадающего в один из двух диапазонов) или в виде значения тока. Это зависит от типа используемой технологии построения электронной логики. Поэтому любой тип электронного вентиля требует наличия питания для приведения выходного сигнала к необходимым уровням сигнала. 
 
 Основой для изготовления микросхем служат кристаллы химически чистого кремния. Получение таких кристаллов – весьма сложный технологический процесс. На поверхности полупроводника можно формировать различные структуры. Если в локальные участки кристалла чистого кремния вводить небольшое количество примесей какого-либо пятивалентного вещества, например мышьяка или сурьмы, можно получить участки полупроводника n-типа, в котором проводимость возникает за счет наличия свободных электронов. Если же в другие участки вводить примеси трехвалентного вещества, например индия, то можно получить участки полупроводника p-типа, где проводимость обеспечивается за счет так называемых «дырок» - нехватки электрона в связях кристаллической решетки. Кроме этого, на поверхность кристалла можно наносить изолирующие слои, и слои металла. Если располагать эти элементы в определенном порядке, можно получать различные электронные компоненты с заданными электрическими свойствами.
 
+---
 
-[Транзистор](https://ru.wikipedia.org/wiki/Транзистор) – основной электронный компонент. 
-В частности, на поверхности кремниевого кристалла можно сформировать транзистор – основной электронный компонент всей полупроводниковой электроники. Существует два основных вида транзисторов: полевые, в которых управление током в выходной цепи осуществляется за счёт изменения входного напряжения, и биполярные – в которых управление осуществляется за счёт изменения тока. Небольшое изменение входных величин может приводить к существенно большему изменению выходного напряжения и тока. Это усилительное свойство транзисторов используется в аналоговой технике (аналоговые ТВ, радио, связь и т. п.), где сейчас доминируют биполярные транзисторы. Другой важнейшей отраслью электроники является цифровая техника (компьютеры), где, напротив, биполярные транзисторы почти полностью вытеснены полевыми.
+![Транзистор](https://raw.githubusercontent.com/egormkn/ifmo-kt/master/course1/computer_architecture/images/transistor.png)
+
+В частности, на поверхности кремниевого кристалла можно сформировать [транзистор](https://ru.wikipedia.org/wiki/Транзистор) – основной электронный компонент всей полупроводниковой электроники. Существует два основных вида транзисторов: полевые, в которых управление током в выходной цепи осуществляется за счёт изменения входного напряжения, и биполярные – в которых управление осуществляется за счёт изменения тока. Небольшое изменение входных величин может приводить к существенно большему изменению выходного напряжения и тока. Это усилительное свойство транзисторов используется в аналоговой технике (аналоговые ТВ, радио, связь и т. п.), где сейчас доминируют биполярные транзисторы. Другой важнейшей отраслью электроники является цифровая техника (компьютеры), где, напротив, биполярные транзисторы почти полностью вытеснены полевыми.
 
 В цифровой электронике на сегодняшний день чаще всего используются так называемые МОП-транзисторы. Сокращение «МОП» означает комбинацию основных составляющих материалов транзисторов – Металл-Оксид-Полупроводник (также часто встречаются названия «МДП» – Металл-Диэлектрик-Полупроводник и «MOSFET» - metal-oxide-semiconductor field effect transistor).
+
+
+Если в полупроводнике n-типа с отрицательными носителями заряда имеются две области p-типа с положительными носителями заряда, то проводимостью между этими областями можно управлять при помощи изолированного электрода. Если на этом электроде создать отрицательный заряд, то за счет электростатической индукции в полупроводнике возникает область повышенной концентрации положительных  зарядов, обеспечивающая проводимость между областями p-типа. Такой транзистор называется p-канальным и открыт тогда, когда на управляющем электроде присутствует отрицательный по отношению к подложке потенциал.
+
+Если же  изменить сочетание проводимости областей транзистора, т.е. в полупроводнике p-типа c положительными носителями зарядов создать области n-типа с отрицательными носителями, то проводимость появится при наличии на изолированном электроде положительного заряда. Такой транзистор называется n-канальным, и открывается тогда, когда на управляющем электроде присутствует положительный по отношению к подложке потенциал.
+
+P-канальные и N-канальные транзисторы являются как бы зеркальным отражением друг друга. Пару таких транзисторов, соединенных последовательно называют, комплементарной парой. А к названию технологии, использующей такие пары транзисторов добавилась буква «К» - КМОП («CMOS» - complementary metal-oxide-semiconductor).
