Update 1.1 Логические элементы.md

--- a/course1/computer_architecture/1.1 Логические элементы.md
+++ b/course1/computer_architecture/1.1 Логические элементы.md
@@ -13,7 +13,7 @@
 
 ---
 
-![Транзистор](https://raw.githubusercontent.com/egormkn/ifmo-kt/master/course1/computer_architecture/images/transistor.png)
+<img style="float: right; width: 150px;" src="https://raw.githubusercontent.com/egormkn/ifmo-kt/master/course1/computer_architecture/images/transistor.png">
 
 В частности, на поверхности кремниевого кристалла можно сформировать [транзистор](https://ru.wikipedia.org/wiki/Транзистор) – основной электронный компонент всей полупроводниковой электроники. Существует два основных вида транзисторов: полевые, в которых управление током в выходной цепи осуществляется за счёт изменения входного напряжения, и биполярные – в которых управление осуществляется за счёт изменения тока. Небольшое изменение входных величин может приводить к существенно большему изменению выходного напряжения и тока. Это усилительное свойство транзисторов используется в аналоговой технике (аналоговые ТВ, радио, связь и т. п.), где сейчас доминируют биполярные транзисторы. Другой важнейшей отраслью электроники является цифровая техника (компьютеры), где, напротив, биполярные транзисторы почти полностью вытеснены полевыми.
 
