Update 1.1 Логические элементы.md

--- a/course1/computer_architecture/1.1 Логические элементы.md
+++ b/course1/computer_architecture/1.1 Логические элементы.md
@@ -13,6 +13,8 @@
 
 ---
 
+### Транзистор
+
 <img width="150" align="right" src="https://raw.githubusercontent.com/egormkn/ifmo-kt/master/course1/computer_architecture/images/transistor.png">
 
 В частности, на поверхности кремниевого кристалла можно сформировать **[транзистор](https://ru.wikipedia.org/wiki/Транзистор)** – основной электронный компонент всей полупроводниковой электроники. Существует два основных вида транзисторов: *полевые*, в которых управление током в выходной цепи осуществляется за счёт изменения входного напряжения, и *биполярные* – в которых управление осуществляется за счёт изменения тока. Небольшое изменение входных величин может приводить к существенно большему изменению выходного напряжения и тока. Это усилительное свойство транзисторов используется в аналоговой технике (аналоговые ТВ, радио, связь и т. п.), где сейчас доминируют биполярные транзисторы. Другой важнейшей отраслью электроники является цифровая техника (компьютеры), где, напротив, биполярные транзисторы почти полностью вытеснены полевыми.
@@ -26,6 +28,22 @@
 Если же  изменить сочетание проводимости областей транзистора, т.е. в полупроводнике p-типа c положительными носителями зарядов создать области n-типа с отрицательными носителями, то проводимость появится при наличии на изолированном электроде положительного заряда. Такой транзистор называется n-канальным, и открывается тогда, когда на управляющем электроде присутствует положительный по отношению к подложке потенциал.
 
 
-<img src="https://raw.githubusercontent.com/egormkn/ifmo-kt/master/course1/computer_architecture/images/transistor-types.png">
+![P-канальный и N-канальный транзисторы](https://raw.githubusercontent.com/egormkn/ifmo-kt/master/course1/computer_architecture/images/transistor-types.png)
 
 P-канальные и N-канальные транзисторы являются как бы зеркальным отражением друг друга. Пару таких транзисторов, соединенных последовательно называют, комплементарной парой. А к названию технологии, использующей такие пары транзисторов добавилась буква «К» - КМОП («CMOS» - complementary metal-oxide-semiconductor).
+
+---
+
+### Инвертор
+
+Пара комплементарных МОП-транзисторов, соединенных последовательно и имеющая общий вход представляет собой простейший логический элемент – **инвертор «НЕ» (NOT)**.
+
+![Инвертор на КМОП-транзисторах](https://raw.githubusercontent.com/egormkn/ifmo-kt/master/course1/computer_architecture/images/invertor-cmos.png)
+
+Если на входе такой схемы напряжение близко к 0, то нижний транзистор будет закрыт, поскольку этого напряжения окажется недостаточно для формирования проводящего канала. Зато откроется верхний, у которого по отношению к подложке на управляющем электроде окажется максимальное напряжение. Тогда на выходе напряжение станет близко к напряжению питания. И наоборот, если напряжение на входе станет близким к напряжению питания, верхний транзистор закроется, но откроется нижний, и напряжение на выходе станет минимальным. Если напряжение близкое к нулю считать за логический ноль, а близкое к напряжению питания – за логическую единицу, то эта схема будет выполнять логическую функцию «не».
+
+Также инвертор можно реализовать с использованием одного транзистора, но в таком случае необходимо использовать резистор в качестве нагрузки для предотвращения короткого замыкания. 
+
+![Инвертор на транзисторе и резисторе](https://raw.githubusercontent.com/egormkn/ifmo-kt/master/course1/computer_architecture/images/invertor-res.png)
+
+Когда на входе «0», транзистор закрыт, и на выход через резистор подаётся высокое напряжение. При подаче «1» на вход транзистор открывается, и выход оказывается замкнут на землю. Ток также течёт через транзистор, но сразу уходит в землю, не попадая на выход, инвертор при этом выдаёт «0». Минус этого инвертора – высокое энергопотребление и тепловыделение, энергия расходуется постоянно, и почти полностью переходит в тепло. Поэтому в современных устройствах используются логические элементы на КМОП-парах.
