Update 1.1 Логические элементы.md

--- a/course1/computer_architecture/1.1 Логические элементы.md
+++ b/course1/computer_architecture/1.1 Логические элементы.md
@@ -36,7 +36,7 @@ P-канальные и N-канальные транзисторы являют
 
 ### Инвертор
 
-Пара комплементарных МОП-транзисторов, соединенных последовательно и имеющая общий вход представляет собой простейший логический элемент – **инвертор «НЕ» (NOT)**.
+Пара комплементарных МОП-транзисторов, соединенных последовательно и имеющая общий вход представляет собой простейший логический элемент – инвертор **«НЕ» (NOT)**.
 
 ![Инвертор на КМОП-транзисторах](https://raw.githubusercontent.com/egormkn/ifmo-kt/master/course1/computer_architecture/images/invertor-cmos.png)
 
@@ -47,3 +47,58 @@ P-канальные и N-канальные транзисторы являют
 ![Инвертор на транзисторе и резисторе](https://raw.githubusercontent.com/egormkn/ifmo-kt/master/course1/computer_architecture/images/invertor-res.png)
 
 Когда на входе «0», транзистор закрыт, и на выход через резистор подаётся высокое напряжение. При подаче «1» на вход транзистор открывается, и выход оказывается замкнут на землю. Ток также течёт через транзистор, но сразу уходит в землю, не попадая на выход, инвертор при этом выдаёт «0». Минус этого инвертора – высокое энергопотребление и тепловыделение, энергия расходуется постоянно, и почти полностью переходит в тепло. Поэтому в современных устройствах используются логические элементы на КМОП-парах.
+
+---
+
+### Основное соглашение цифровой электроники
+
+Для того, чтобы обсуждать логические функции различных элементов необходимо договориться о некоторых соглашениях.
+
+Во-первых, необходимо решить, что следует считать нулем, а что – единицей. Чаще всего используется соглашение, когда за логический ноль принимается напряжение менее 1/10 напряжения питания, а за логическую единицу – более половины напряжения питания. Для элементов, изготовленных по разным технологиям, значения напряжений могут быть разными и для их совместного использования могут потребоваться специальные согласующие элементы. Соглашение, при котором за логический ноль принимается низкое напряжение, а за логическую единицу – высокое, называется соглашением положительной логики. Можно поступить и наоборот. За логическую единицу принять низкое напряжение, за логический ноль – высокое. Это называется соглашением отрицательной логики. Мы будем пользоваться положительным соглашением.
+
+Во-вторых, при изменении логических значений на входе элемента, состояние его выхода меняется не мгновенно. Требуется время для переключения транзисторов, перезарядки емкостей и других процессов. По прошествии какого-то времени эти процессы завершаются, и выход элемента приобретает устойчивое состояние. Это состояние соответствует логической функции элемента. Во время между изменением входного сигнала данного элемента и завершением переходных процессов в элементе, состояние его выхода непредсказуемо. Это время называют максимальным временем задержки данного элемента. При прохождении сигнала последовательно через несколько логических элементов, времена задержки складываются. Состояние выхода схемы можно считать достоверным только по прошествии времени, равного сумме максимальных задержек последовательно включенных элементов схемы, от момента изменения входного сигнала.
+
+---
+
+Подобным образом можно строить и более сложные логические элементы. Если соединить четыре транзистора способом, изображенным на рисунке, получится логический элемент **«И-НЕ» (NAND)**.
+
+![Логический элемент И-НЕ](https://raw.githubusercontent.com/egormkn/ifmo-kt/master/course1/computer_architecture/images/nand.png)
+
+Когда на обоих входах этой схемы будет присутствовать напряжение логической единицы, два верхних транзистора будут закрыты, но откроются оба нижних транзистора, и на выходе схемы появится напряжение логического нуля. Если на каком-либо из входов напряжение будет отсутствовать, т.е. окажется логический ноль, будет открыт один из верхних транзисторов, но закрыт один из нижних. В этом случае на выходе будет логическая единица. Если логический ноль будет присутствовать на обоих входах, будут открыты оба верхних транзистора и закрыты оба нижних. На выходе в этом случае также будет логическая единица. Таким образом, на выходе схемы будет логический ноль только тогда, когда на обоих входах будет присутствовать логическая единица.
+
+Похожая схема реализует логическую функцию **«ИЛИ-НЕ» (NOR)**.
+
+![Логический элемент ИЛИ-НЕ](https://raw.githubusercontent.com/egormkn/ifmo-kt/master/course1/computer_architecture/images/nor.png)
+
+Если в этой схеме хотя бы на одном из входов будет присутствовать напряжение логической единицы, будет открыт один из нижних транзисторов, но какой-то из верхних будет закрыт, и на выходе будет логический ноль. И только тогда, когда ни на одном из входов не будет логической единицы, на выходе будет единица.
+
+На схемах ниже приведены реализации элементов **И** и **ИЛИ** на КМОП-транзисторах. Первая выдаёт логическую единицу только если на оба входа поступает логическая единица. Вторая выдаёт логическую единицу, если хотя бы на один вход поступает единица.
+
+![Логический элемент И](https://raw.githubusercontent.com/egormkn/ifmo-kt/master/course1/computer_architecture/images/and.png)
+
+![Логический элемент ИЛИ](https://raw.githubusercontent.com/egormkn/ifmo-kt/master/course1/computer_architecture/images/or.png)
+
+Путем различных комбинаций логические элементы можно выражать друг через друга, а также строить из них схемы с более сложными логическими функциями. Любую логическую функцию можно выразить при помощи минимального набора базовых логических элементов. Такой минимальный набор называется базисом. Наиболее прост для понимания базис, состоящий из трех типов элементов – И, ИЛИ, НЕ. На практике, в цифровых устройствах чаще применяются базисы, состоящие из элементов И-НЕ или ИЛИ-НЕ, поскольку такие элементы проще составлять из транзисторов. Любая логическая схема может быть представлена в любом базисе.
+
+Например, в виде комбинации логических элементов ИЛИ-НЕ можно представить логический элемент **«Исключающее ИЛИ» (XOR)**. Этот элемент должен выдавать логическую единицу только в том случае, если два логических значения на его входах не равны друг другу. Другими словами - если единице равен не какой-нибудь из его входов, как в обычном элементе «ИЛИ», а ТОЛЬКО ОДИН из его входов.  
+![Логический элемент Исключающее ИЛИ](https://raw.githubusercontent.com/egormkn/ifmo-kt/master/course1/computer_architecture/images/xor.png)
+
+---
+
+### Представление информации физическими сигналами
+
+В ЭВМ широко применяют два способа физического представления сигналов: импульсный и потенциальный. При **импульсном** способе представления сигналов единичному значению некоторой двоичной переменной ставится в соответствие наличие импульса (тока или напряжения), нулевому значению - отсутствие импульса. Длительность импульсного сигнала не превышает один такт синхронизационных импульсов. При **потенциальном** или **статическом** представлении сигналов единичное значение двоичной переменной отображается высоким уровнем напряжения, а нулевое значение - низким уровнем.
+
+![Импульсный и потенциальный сигналы](https://raw.githubusercontent.com/egormkn/ifmo-kt/master/course1/computer_architecture/images/signals.png)
+
+---
+
+### Мультиплекстор и демультиплексор
+
+[Мультиплексор](http://www.youtube.com/watch?v=XSTeLCxEGuk) или шифратор ([wiki](https://ru.wikipedia.org/wiki/Мультиплексор_(электроника))) — логический элемент, получающий на вход  булевых значений и n-значное число i в двоичном представлении и возвращающий значение на i-м входе.
+
+[Демультиплексор](http://www.youtube.com/watch?v=itcG1loBmZ8) или дешифратор ([wiki](https://ru.wikipedia.org/wiki/Демультиплексор)) — логический элемент, получающий на вход булево значение X, n-значное число i в двоичном представлении и выводящий X на i-й из своих  выходов и 0 на все остальные.
+
+![Мультиплексор и демультиплексор](https://raw.githubusercontent.com/egormkn/ifmo-kt/master/course1/computer_architecture/images/mux-demux.png)
+
+---
