Update 1.1 Логические элементы.md

--- a/course1/computer_architecture/1.1 Логические элементы.md
+++ b/course1/computer_architecture/1.1 Логические элементы.md
@@ -95,10 +95,51 @@ P-канальные и N-канальные транзисторы являют
 
 ### Мультиплекстор и демультиплексор
 
-[Мультиплексор](http://www.youtube.com/watch?v=XSTeLCxEGuk) или шифратор ([wiki](https://ru.wikipedia.org/wiki/Мультиплексор_(электроника))) — логический элемент, получающий на вход  булевых значений и n-значное число i в двоичном представлении и возвращающий значение на i-м входе.
+[Мультиплексор](http://www.youtube.com/watch?v=XSTeLCxEGuk) или шифратор ([wiki](https://ru.wikipedia.org/wiki/Мультиплексор_(электроника))) — логический элемент, получающий на вход 2^n булевых значений и n-значное число i в двоичном представлении и возвращающий значение на i-м входе.
 
-[Демультиплексор](http://www.youtube.com/watch?v=itcG1loBmZ8) или дешифратор ([wiki](https://ru.wikipedia.org/wiki/Демультиплексор)) — логический элемент, получающий на вход булево значение X, n-значное число i в двоичном представлении и выводящий X на i-й из своих  выходов и 0 на все остальные.
+[Демультиплексор](http://www.youtube.com/watch?v=itcG1loBmZ8) или дешифратор ([wiki](https://ru.wikipedia.org/wiki/Демультиплексор)) — логический элемент, получающий на вход булево значение X, n-значное число i в двоичном представлении и выводящий X на i-й из своих 2^n выходов и 0 на все остальные.
 
 ![Мультиплексор и демультиплексор](https://raw.githubusercontent.com/egormkn/ifmo-kt/master/course1/computer_architecture/images/mux-demux.png)
 
+![Наращивание размерности мультиплексора и демультиплексора](https://raw.githubusercontent.com/egormkn/ifmo-kt/master/course1/computer_architecture/images/mux-demux-increase.png)
+
 ---
+
+### Триггеры
+
+**[Триггер](https://ru.wikipedia.org/wiki/Триггер)**  - это устройство последовательного типа с двумя устойчивыми состояниями равновесия, предназначенное для записи и хранения информации. Под действием входных сигналов триггер может переключаться из одного устойчивого состояния в другое. При этом напряжение на его выходе скачкообразно изменяется.
+
+Как правило, триггер имеет два выхода: прямой и инверсный. Число входов зависит от структуры и функций, выполняемых триггером. По способу записи информации триггеры делят на **асинхронные** и **синхронизируемые** (тактируемые). В асинхронных триггерах информация может записываться непрерывно и определяется информационными сигналами, действующими на входах в данный момент времени. Если информация заносится в триггер только в момент действия так называемого синхронизирующего сигнала, поступающего на отдельный вход, то такой триггер называют синхронизируемым или тактируемым. Синхронизацию применяют для компенсации различий во времени передачи сигналов в логических схемах. Из асинхронного триггера можно сделать синхронный, добавив AND со входом синхронизации на каждый вход асинхронного триггера.
+В цифровой технике приняты следующие обозначения входов триггеров:
+- S (Set) - раздельный вход установки в единичное состояние (напряжение высокого уровня на прямом выходе Q)
+- R (Reset) - раздельный вход сброса в нулевое состояние (напряжение низкого уровня на прямом выходе Q)
+- D - информационный вход (на него подается информация, предназначенная для занесения в триггер)
+- C - вход синхронизации
+- Т - счетный вход
+
+
+    TODO: Триггеры
+
+---
+
+### Регистры
+
+**[Регистр](http://www.youtube.com/watch?v=rb4q_mIHaQ0)** ([wiki](https://ru.wikipedia.org/wiki/Регистр_(цифровая_техника))) — устройство, используемое для хранения n-разрядных двоичных данных и выполнения преобразований над ними. Регистр представляет собой упорядоченный набор триггеров. С каждым регистром обычно связано комбинационное цифровое устройство, с помощью которого обеспечивается выполнение некоторых операций над данными. Основой построения регистров являются: D-триггеры, RS-триггеры, JK-триггеры (в основном D).
+
+Наиболее широко используются два типа: параллельные и сдвиговые регистры. В параллельных регистрах каждый триггер имеет свой независимый вход и выход, тактовые входы триггеров соединены между собой. По сути, параллельный регистр – это синхронизируемый триггер с несколькими входами и выходами. В сдвиговых регистрах все триггеры соединены в последовательную цепочку, тактовые входы также соединены. Входной сигнал в таком регистре последовательно перезаписывается из триггера в триггер по фронту тактового сигнала. 
+
+    TODO: Регистры, модули памяти, счётчики, сумматоры
+
+---
+
+### Полезные ссылки
+
+1. [Справочник по электронике (de.ifmo.ru)](http://de.ifmo.ru/--books/electron/)
+2. [Как устроен процессор - от транзисторов к полным схемам (mnc.ru)](http://mnc.ru/?path=./cpu/)
+3. [Курс "Цифровые устройства" (digteh.ru)](http://digteh.ru/digital/)
+4. [Самоучитель по микропроцессорной технике (book.mirmk.net)](http://book.mirmk.net/book1/text/index.htm)
+5. [Электротехника и электроника для программистов (youtube.com)](https://www.youtube.com/user/Zefar91)
+
+---
+
+### [<< Назад](https://github.com/egormkn/ifmo-kt/edit/master/course1/computer_architecture/README.md)
